--- a/sandbox/bench.ipynb
+++ b/sandbox/bench.ipynb
@@ -10,7 +10,9 @@
     "import zarr\n",
     "from scipy.spatial.distance import squareform\n",
     "import anjl\n",
-    "from tqdm.auto import tqdm"
+    "from tqdm.auto import tqdm\n",
+    "\n",
+    "%load_ext memory_profiler"
    ]
   },
   {
@@ -54,7 +56,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.54 ms ± 106 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "1.57 ms ± 158 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -73,7 +75,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.48 ms ± 388 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "4.56 ms ± 492 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -92,7 +94,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.05 ms ± 157 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "2.08 ms ± 203 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -142,7 +144,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7.07 ms ± 518 μs per loop (mean ± std. dev. of 500 runs, 1 loop each)\n"
+      "7.21 ms ± 482 μs per loop (mean ± std. dev. of 500 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -161,7 +163,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "35.8 ms ± 957 μs per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
+      "36.8 ms ± 1.84 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -180,7 +182,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "24.4 ms ± 758 μs per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
+      "24.5 ms ± 881 μs per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -199,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "31ba8838-150b-42ee-84fd-7da492b8c36c",
    "metadata": {},
    "outputs": [
@@ -209,7 +211,7 @@
        "(3081, 3081)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +232,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "326 ms ± 24.1 ms per loop (mean ± std. dev. of 20 runs, 1 loop each)\n"
+      "325 ms ± 9.51 ms per loop (mean ± std. dev. of 20 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -249,7 +251,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.91 s ± 16.9 ms per loop (mean ± std. dev. of 5 runs, 1 loop each)\n"
+      "2.94 s ± 16.8 ms per loop (mean ± std. dev. of 5 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -268,13 +270,51 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7.72 s ± 41.7 ms per loop (mean ± std. dev. of 3 runs, 1 loop each)\n"
+      "7.84 s ± 79.5 ms per loop (mean ± std. dev. of 3 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit -r3 -n1\n",
     "anjl.canonical_nj(large_dist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "00997e17-82ec-4e34-be55-26631a80c738",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "peak memory: 355.34 MiB, increment: 36.16 MiB\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%memit\n",
+    "anjl.dynamic_nj(large_D);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "782af7e8-8891-431b-be9e-835b442410c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "peak memory: 337.09 MiB, increment: 18.17 MiB\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%memit\n",
+    "anjl.canonical_nj(large_dist);"
    ]
   },
   {
