--- a/sandbox/profile.ipynb
+++ b/sandbox/profile.ipynb
@@ -12,17 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e6600780-d0bd-42db-8db8-a13dfe078214",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %load_ext snakeviz"
+    "%load_ext snakeviz"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "dcaff1fc-e130-4661-b6d2-61320969b73d",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "8b6a001e-6e46-4c56-8c37-33ef5693d6e5",
    "metadata": {},
    "outputs": [],
@@ -105,14 +105,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "e5c44b72-6d4a-496c-8b98-3a0ac39ae722",
    "metadata": {},
    "outputs": [],
    "source": [
     "# %%snakeviz\n",
-    "# anjl.canonical_nj(large_D_shuffled)\n",
-    "# anjl.rapid_nj(large_D_shuffled, gc=100)"
+    "# anjl.canonical_nj(large_dist)\n",
+    "# # anjl.rapid_nj(large_D_shuffled, gc=100)"
    ]
   },
   {
