--- a/sandbox/bench.ipynb
+++ b/sandbox/bench.ipynb
@@ -56,13 +56,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.57 ms ± 158 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "1.75 ms ± 130 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit -r1000 -n1\n",
-    "anjl.dynamic_nj(small_D)"
+    "anjl.dynamic_nj(small_dist)"
    ]
   },
   {
@@ -75,13 +75,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.56 ms ± 492 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "4.43 ms ± 214 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit -r1000 -n1\n",
-    "anjl.rapid_nj(small_D)"
+    "anjl.rapid_nj(small_dist)"
    ]
   },
   {
@@ -94,7 +94,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.08 ms ± 203 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "2.21 ms ± 165 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -144,13 +144,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7.21 ms ± 482 μs per loop (mean ± std. dev. of 500 runs, 1 loop each)\n"
+      "7.81 ms ± 461 μs per loop (mean ± std. dev. of 500 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit -r500 -n1\n",
-    "anjl.dynamic_nj(medium_D)"
+    "anjl.dynamic_nj(medium_dist)"
    ]
   },
   {
@@ -163,13 +163,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "36.8 ms ± 1.84 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
+      "37.1 ms ± 1.68 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit -r200 -n1\n",
-    "anjl.rapid_nj(medium_D)"
+    "anjl.rapid_nj(medium_dist)"
    ]
   },
   {
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "31ba8838-150b-42ee-84fd-7da492b8c36c",
    "metadata": {},
    "outputs": [
@@ -211,7 +211,7 @@
        "(3081, 3081)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "e825c570-c9b0-4405-b0b3-84680eaf5f2a",
    "metadata": {},
    "outputs": [
@@ -232,18 +232,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "325 ms ± 9.51 ms per loop (mean ± std. dev. of 20 runs, 1 loop each)\n"
+      "362 ms ± 16.7 ms per loop (mean ± std. dev. of 20 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit -r20 -n1\n",
-    "anjl.dynamic_nj(large_D)"
+    "anjl.dynamic_nj(large_dist)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "edbc408e-f210-4bd4-8762-e249c66c1dd0",
    "metadata": {},
    "outputs": [
@@ -251,13 +251,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.94 s ± 16.8 ms per loop (mean ± std. dev. of 5 runs, 1 loop each)\n"
+      "3.05 s ± 80.4 ms per loop (mean ± std. dev. of 5 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit -r5 -n1\n",
-    "anjl.rapid_nj(large_D)"
+    "anjl.rapid_nj(large_dist)"
    ]
   },
   {
@@ -289,18 +289,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 355.34 MiB, increment: 36.16 MiB\n"
+      "peak memory: 336.73 MiB, increment: 18.08 MiB\n"
      ]
     }
    ],
    "source": [
     "%%memit\n",
-    "anjl.dynamic_nj(large_D);"
+    "anjl.dynamic_nj(large_dist);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "782af7e8-8891-431b-be9e-835b442410c7",
    "metadata": {},
    "outputs": [
@@ -308,7 +308,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 337.09 MiB, increment: 18.17 MiB\n"
+      "peak memory: 336.61 MiB, increment: 17.79 MiB\n"
      ]
     }
    ],
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "c219009d-5813-4f98-ad24-ed9b341c438d",
    "metadata": {},
    "outputs": [
@@ -337,7 +337,7 @@
        "(5868, 5868)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,14 +350,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "50f32cfd-9755-40ba-ba55-7eef7242a6cf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "df68c1e698dd4eada1275c1a67dcfd7e",
+       "model_id": "ac8df43cdb134d72ab03ee7308847ce0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -372,26 +372,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.67 s, sys: 26.9 ms, total: 1.7 s\n",
-      "Wall time: 1.69 s\n"
+      "CPU times: user 2.09 s, sys: 12.1 ms, total: 2.1 s\n",
+      "Wall time: 2.09 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "anjl.dynamic_nj(xl_D, progress=tqdm);"
+    "anjl.dynamic_nj(xl_dist, progress=tqdm);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "id": "d03fdca2-2c6e-4389-ad3c-0bb84eb6ce16",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1db303b5470b4e759985b7271c2c6061",
+       "model_id": "21c1e052ca3248f9bf120e7867b481f9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -406,14 +406,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 19.1 s, sys: 249 ms, total: 19.3 s\n",
-      "Wall time: 19.2 s\n"
+      "CPU times: user 20.6 s, sys: 291 ms, total: 20.9 s\n",
+      "Wall time: 20.8 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "anjl.rapid_nj(xl_D, progress=tqdm);"
+    "anjl.rapid_nj(xl_dist, progress=tqdm);"
    ]
   },
   {
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "id": "ccd20931-8281-49ff-b142-d0fae8d53f63",
    "metadata": {},
    "outputs": [
@@ -470,27 +470,27 @@
        "(8825, 8825)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "xxl = zarr.load(\"../benchmark/xxl/dist.zarr.zip\")\n",
-    "xxl_D = squareform(xxl)\n",
+    "xxl_dist = zarr.load(\"../benchmark/xxl/dist.zarr.zip\")\n",
+    "xxl_D = squareform(xxl_dist)\n",
     "xxl_D.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "id": "4b302183-5d97-41c0-857f-59086e8b981f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "61cfdde780e64d4b9ce986b2630bdef2",
+       "model_id": "98ea12802b5548c2b2bd57904e794e32",
        "version_major": 2,
        "version_minor": 0
       },
@@ -505,26 +505,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 5.02 s, sys: 43 ms, total: 5.06 s\n",
-      "Wall time: 5.03 s\n"
+      "CPU times: user 6.91 s, sys: 24.9 ms, total: 6.94 s\n",
+      "Wall time: 6.89 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "anjl.dynamic_nj(xxl_D, progress=tqdm);"
+    "anjl.dynamic_nj(xxl_dist, progress=tqdm);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "94f6d2f5-e61e-45c8-934f-66289798bce9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0f9335d71e6d4285bcedb02f22b18d35",
+       "model_id": "77712a7ecfe9490e8e3c42dc7dbe759e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -534,19 +534,11 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 1min 5s, sys: 568 ms, total: 1min 5s\n",
-      "Wall time: 1min 5s\n"
-     ]
     }
    ],
    "source": [
     "%%time\n",
-    "anjl.rapid_nj(xxl_D, progress=tqdm);"
+    "anjl.rapid_nj(xxl_dist, progress=tqdm);"
    ]
   },
   {
