fix typing; update params

--- a/sandbox/bench.ipynb
+++ b/sandbox/bench.ipynb
@@ -56,7 +56,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.75 ms ± 130 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "1.66 ms ± 91.5 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -75,7 +75,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.43 ms ± 214 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "4.37 ms ± 230 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -94,7 +94,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.21 ms ± 165 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "2.15 ms ± 141 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -144,7 +144,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7.81 ms ± 461 μs per loop (mean ± std. dev. of 500 runs, 1 loop each)\n"
+      "7.39 ms ± 266 μs per loop (mean ± std. dev. of 500 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -163,7 +163,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "37.1 ms ± 1.68 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
+      "34.7 ms ± 855 μs per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -182,7 +182,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "24.5 ms ± 881 μs per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
+      "24.8 ms ± 1.02 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "31ba8838-150b-42ee-84fd-7da492b8c36c",
    "metadata": {},
    "outputs": [
@@ -211,7 +211,7 @@
        "(3081, 3081)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,64 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "e825c570-c9b0-4405-b0b3-84680eaf5f2a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "362 ms ± 16.7 ms per loop (mean ± std. dev. of 20 runs, 1 loop each)\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%timeit -r20 -n1\n",
-    "anjl.dynamic_nj(large_dist)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 11,
-   "id": "edbc408e-f210-4bd4-8762-e249c66c1dd0",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.05 s ± 80.4 ms per loop (mean ± std. dev. of 5 runs, 1 loop each)\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%timeit -r5 -n1\n",
-    "anjl.rapid_nj(large_dist)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "0bc124d6-dfcb-4513-ae57-471c2a063d62",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7.84 s ± 79.5 ms per loop (mean ± std. dev. of 3 runs, 1 loop each)\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%timeit -r3 -n1\n",
-    "anjl.canonical_nj(large_dist)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "id": "00997e17-82ec-4e34-be55-26631a80c738",
    "metadata": {},
    "outputs": [
@@ -289,7 +232,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 336.73 MiB, increment: 18.08 MiB\n"
+      "peak memory: 344.52 MiB, increment: 18.05 MiB\n"
      ]
     }
    ],
@@ -300,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "782af7e8-8891-431b-be9e-835b442410c7",
    "metadata": {},
    "outputs": [
@@ -308,13 +251,70 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 336.61 MiB, increment: 17.79 MiB\n"
+      "peak memory: 343.70 MiB, increment: 17.08 MiB\n"
      ]
     }
    ],
    "source": [
     "%%memit\n",
     "anjl.canonical_nj(large_dist);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "e825c570-c9b0-4405-b0b3-84680eaf5f2a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "342 ms ± 46 ms per loop (mean ± std. dev. of 20 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit -r20 -n1\n",
+    "anjl.dynamic_nj(large_dist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "edbc408e-f210-4bd4-8762-e249c66c1dd0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.96 s ± 12.1 ms per loop (mean ± std. dev. of 5 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit -r5 -n1\n",
+    "anjl.rapid_nj(large_dist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "0bc124d6-dfcb-4513-ae57-471c2a063d62",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.59 s ± 28.8 ms per loop (mean ± std. dev. of 3 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit -r3 -n1\n",
+    "anjl.canonical_nj(large_dist)"
    ]
   },
   {
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "c219009d-5813-4f98-ad24-ed9b341c438d",
    "metadata": {},
    "outputs": [
@@ -337,7 +337,7 @@
        "(5868, 5868)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,14 +350,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
+   "id": "6c65d726-92f9-4294-ac41-8d6f7b182572",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "peak memory: 607.52 MiB, increment: 65.63 MiB\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%memit\n",
+    "anjl.dynamic_nj(xl_dist);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "50f32cfd-9755-40ba-ba55-7eef7242a6cf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ac8df43cdb134d72ab03ee7308847ce0",
+       "model_id": "84d173feba3f4adebdb98cab851fc61f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -372,8 +391,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.09 s, sys: 12.1 ms, total: 2.1 s\n",
-      "Wall time: 2.09 s\n"
+      "CPU times: user 2.12 s, sys: 17.9 ms, total: 2.14 s\n",
+      "Wall time: 2.13 s\n"
      ]
     }
    ],
@@ -384,14 +403,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "id": "d03fdca2-2c6e-4389-ad3c-0bb84eb6ce16",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "21c1e052ca3248f9bf120e7867b481f9",
+       "model_id": "f13df581e4084d329817d854547a1c24",
        "version_major": 2,
        "version_minor": 0
       },
@@ -406,8 +425,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 20.6 s, sys: 291 ms, total: 20.9 s\n",
-      "Wall time: 20.8 s\n"
+      "CPU times: user 20.3 s, sys: 316 ms, total: 20.6 s\n",
+      "Wall time: 20.5 s\n"
      ]
     }
    ],
@@ -425,7 +444,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "20991b804c7e4b079b07f3985c7336aa",
+       "model_id": "b13b2c9922b54599adcfb2d9629d19f1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -440,8 +459,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 24s, sys: 122 ms, total: 1min 24s\n",
-      "Wall time: 1min 24s\n"
+      "CPU times: user 1min 31s, sys: 127 ms, total: 1min 31s\n",
+      "Wall time: 1min 31s\n"
      ]
     }
    ],
@@ -460,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "id": "ccd20931-8281-49ff-b142-d0fae8d53f63",
    "metadata": {},
    "outputs": [
@@ -470,7 +489,7 @@
        "(8825, 8825)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,14 +502,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "id": "4b302183-5d97-41c0-857f-59086e8b981f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "98ea12802b5548c2b2bd57904e794e32",
+       "model_id": "9ed91d22cc3c4b63bccc358ec47431b7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -505,8 +524,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 6.91 s, sys: 24.9 ms, total: 6.94 s\n",
-      "Wall time: 6.89 s\n"
+      "CPU times: user 6.39 s, sys: 35.9 ms, total: 6.43 s\n",
+      "Wall time: 6.38 s\n"
      ]
     }
    ],
@@ -517,14 +536,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "94f6d2f5-e61e-45c8-934f-66289798bce9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "77712a7ecfe9490e8e3c42dc7dbe759e",
+       "model_id": "0402fdf675f4420b851c0b01a2306165",
        "version_major": 2,
        "version_minor": 0
       },
@@ -534,6 +553,14 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 1min 10s, sys: 663 ms, total: 1min 10s\n",
+      "Wall time: 1min 10s\n"
+     ]
     }
    ],
    "source": [
