Add support for condensed distance matrices (#57)
* canonical implement condensed, weird bug!

* found the bug

* canonical condensed implementation done

* memory

* memory

* noop

* all condensed

* fix typing; update params

--- a/sandbox/profile.ipynb
+++ b/sandbox/profile.ipynb
@@ -12,25 +12,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e6600780-d0bd-42db-8db8-a13dfe078214",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %load_ext snakeviz"
+    "%load_ext snakeviz"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "dcaff1fc-e130-4661-b6d2-61320969b73d",
    "metadata": {},
    "outputs": [],
    "source": [
     "import zarr\n",
     "from scipy.spatial.distance import squareform\n",
-    "import numpy as np\n",
     "import anjl"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "645a20f2-2202-4a66-9390-38cda0ae5265",
+   "metadata": {},
+   "source": [
+    "## Medium"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff76e278-6a3a-4e46-99e0-45efd12a20ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "medium_dist = zarr.load(\"../benchmark/medium/dist.zarr.zip\")\n",
+    "medium_D = squareform(medium_dist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1fc2fd6a-e2cd-49ff-8a89-c1d771b910dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%profila\n",
+    "anjl.canonical_nj(medium_dist)"
    ]
   },
   {
@@ -43,16 +72,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "8b6a001e-6e46-4c56-8c37-33ef5693d6e5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "large = zarr.load(\"../data/large/dist.zarr.zip\")\n",
-    "large_D = squareform(large)\n",
-    "shuffle = np.random.choice(large_D.shape[0], size=1000, replace=False)\n",
-    "large_D_shuffled = large_D.take(shuffle, axis=0).take(shuffle, axis=1)\n",
-    "large_D_shuffled"
+    "large_dist = zarr.load(\"../benchmark/large/dist.zarr.zip\")\n",
+    "large_D = squareform(large_dist)"
    ]
   },
   {
@@ -63,7 +89,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "large_Z = anjl.canonical_nj(large_D_shuffled)"
+    "large_Z = anjl.canonical_nj(large_dist)"
    ]
   },
   {
@@ -74,19 +100,19 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "large_Z = anjl.rapid_nj(large_D_shuffled, gc=100)"
+    "large_Z = anjl.rapid_nj(large_D, gc=100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "e5c44b72-6d4a-496c-8b98-3a0ac39ae722",
    "metadata": {},
    "outputs": [],
    "source": [
     "# %%snakeviz\n",
-    "# anjl.canonical_nj(large_D_shuffled)\n",
-    "# anjl.rapid_nj(large_D_shuffled, gc=100)"
+    "# anjl.canonical_nj(large_dist)\n",
+    "# # anjl.rapid_nj(large_D_shuffled, gc=100)"
    ]
   },
   {
@@ -108,7 +134,7 @@
    "outputs": [],
    "source": [
     "%%profila\n",
-    "anjl.rapid_nj(large_D_shuffled, gc=100)"
+    "anjl.rapid_nj(large_D[:1000, :1000], gc=100)"
    ]
   },
   {
@@ -119,7 +145,7 @@
    "outputs": [],
    "source": [
     "%%profila\n",
-    "anjl.canonical_nj(large_D_shuffled)"
+    "anjl.canonical_nj(large_D[:1000, :1000])"
    ]
   },
   {
