--- a/sandbox/bench.ipynb
+++ b/sandbox/bench.ipynb
@@ -10,7 +10,9 @@
     "import zarr\n",
     "from scipy.spatial.distance import squareform\n",
     "import anjl\n",
-    "from tqdm.auto import tqdm"
+    "from tqdm.auto import tqdm\n",
+    "\n",
+    "%load_ext memory_profiler"
    ]
   },
   {
@@ -39,8 +41,8 @@
     }
    ],
    "source": [
-    "small = zarr.load(\"../benchmark/small/dist.zarr.zip\")\n",
-    "small_D = squareform(small)\n",
+    "small_dist = zarr.load(\"../benchmark/small/dist.zarr.zip\")\n",
+    "small_D = squareform(small_dist)\n",
     "small_D.shape"
    ]
   },
@@ -54,13 +56,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.55 ms ± 172 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "1.66 ms ± 91.5 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit -r1000 -n1\n",
-    "anjl.dynamic_nj(small_D)"
+    "anjl.dynamic_nj(small_dist)"
    ]
   },
   {
@@ -73,13 +75,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.36 ms ± 307 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "4.37 ms ± 230 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit -r1000 -n1\n",
-    "anjl.rapid_nj(small_D)"
+    "anjl.rapid_nj(small_dist)"
    ]
   },
   {
@@ -92,13 +94,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.78 ms ± 141 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "2.15 ms ± 141 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit -r1000 -n1\n",
-    "anjl.canonical_nj(small_D)"
+    "anjl.canonical_nj(small_dist)"
    ]
   },
   {
@@ -127,8 +129,8 @@
     }
    ],
    "source": [
-    "medium = zarr.load(\"../benchmark/medium/dist.zarr.zip\")\n",
-    "medium_D = squareform(medium)\n",
+    "medium_dist = zarr.load(\"../benchmark/medium/dist.zarr.zip\")\n",
+    "medium_D = squareform(medium_dist)\n",
     "medium_D.shape"
    ]
   },
@@ -142,13 +144,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7 ms ± 666 μs per loop (mean ± std. dev. of 500 runs, 1 loop each)\n"
+      "7.39 ms ± 266 μs per loop (mean ± std. dev. of 500 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit -r500 -n1\n",
-    "anjl.dynamic_nj(medium_D)"
+    "anjl.dynamic_nj(medium_dist)"
    ]
   },
   {
@@ -161,13 +163,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "34 ms ± 3.66 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
+      "34.7 ms ± 855 μs per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit -r200 -n1\n",
-    "anjl.rapid_nj(medium_D)"
+    "anjl.rapid_nj(medium_dist)"
    ]
   },
   {
@@ -180,13 +182,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23.6 ms ± 873 μs per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
+      "24.8 ms ± 1.02 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit -r200 -n1\n",
-    "anjl.canonical_nj(medium_D)"
+    "anjl.canonical_nj(medium_dist)"
    ]
   },
   {
@@ -215,14 +217,52 @@
     }
    ],
    "source": [
-    "large = zarr.load(\"../benchmark/large/dist.zarr.zip\")\n",
-    "large_D = squareform(large)\n",
+    "large_dist = zarr.load(\"../benchmark/large/dist.zarr.zip\")\n",
+    "large_D = squareform(large_dist)\n",
     "large_D.shape"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "00997e17-82ec-4e34-be55-26631a80c738",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "peak memory: 344.52 MiB, increment: 18.05 MiB\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%memit\n",
+    "anjl.dynamic_nj(large_dist);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "782af7e8-8891-431b-be9e-835b442410c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "peak memory: 343.70 MiB, increment: 17.08 MiB\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%memit\n",
+    "anjl.canonical_nj(large_dist);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "e825c570-c9b0-4405-b0b3-84680eaf5f2a",
    "metadata": {},
    "outputs": [
@@ -230,18 +270,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "323 ms ± 14.8 ms per loop (mean ± std. dev. of 20 runs, 1 loop each)\n"
+      "342 ms ± 46 ms per loop (mean ± std. dev. of 20 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit -r20 -n1\n",
-    "anjl.dynamic_nj(large_D)"
+    "anjl.dynamic_nj(large_dist)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "edbc408e-f210-4bd4-8762-e249c66c1dd0",
    "metadata": {},
    "outputs": [
@@ -249,18 +289,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.92 s ± 61.9 ms per loop (mean ± std. dev. of 5 runs, 1 loop each)\n"
+      "2.96 s ± 12.1 ms per loop (mean ± std. dev. of 5 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit -r5 -n1\n",
-    "anjl.rapid_nj(large_D)"
+    "anjl.rapid_nj(large_dist)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "0bc124d6-dfcb-4513-ae57-471c2a063d62",
    "metadata": {},
    "outputs": [
@@ -268,13 +308,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.39 s ± 160 ms per loop (mean ± std. dev. of 5 runs, 1 loop each)\n"
+      "7.59 s ± 28.8 ms per loop (mean ± std. dev. of 3 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
-    "%%timeit -r5 -n1\n",
-    "anjl.canonical_nj(large_D)"
+    "%%timeit -r3 -n1\n",
+    "anjl.canonical_nj(large_dist)"
    ]
   },
   {
@@ -287,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "c219009d-5813-4f98-ad24-ed9b341c438d",
    "metadata": {},
    "outputs": [
@@ -297,27 +337,46 @@
        "(5868, 5868)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "xl = zarr.load(\"../benchmark/xl/dist.zarr.zip\")\n",
-    "xl_D = squareform(xl)\n",
+    "xl_dist = zarr.load(\"../benchmark/xl/dist.zarr.zip\")\n",
+    "xl_D = squareform(xl_dist)\n",
     "xl_D.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
+   "id": "6c65d726-92f9-4294-ac41-8d6f7b182572",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "peak memory: 607.52 MiB, increment: 65.63 MiB\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%memit\n",
+    "anjl.dynamic_nj(xl_dist);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "50f32cfd-9755-40ba-ba55-7eef7242a6cf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b8e962fe62d44e5e8b17fb0903778b7f",
+       "model_id": "84d173feba3f4adebdb98cab851fc61f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -332,26 +391,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.72 s, sys: 22 ms, total: 1.74 s\n",
-      "Wall time: 1.73 s\n"
+      "CPU times: user 2.12 s, sys: 17.9 ms, total: 2.14 s\n",
+      "Wall time: 2.13 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "anjl.dynamic_nj(xl_D, progress=tqdm);"
+    "anjl.dynamic_nj(xl_dist, progress=tqdm);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "id": "d03fdca2-2c6e-4389-ad3c-0bb84eb6ce16",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "62dba63f68064bd59eb4e60738779ea5",
+       "model_id": "f13df581e4084d329817d854547a1c24",
        "version_major": 2,
        "version_minor": 0
       },
@@ -366,26 +425,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 19.2 s, sys: 272 ms, total: 19.5 s\n",
-      "Wall time: 19.4 s\n"
+      "CPU times: user 20.3 s, sys: 316 ms, total: 20.6 s\n",
+      "Wall time: 20.5 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "anjl.rapid_nj(xl_D, progress=tqdm);"
+    "anjl.rapid_nj(xl_dist, progress=tqdm);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "id": "49b6da7b-1ee3-49e1-98ca-2706a5195b01",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e1a386140c5040d1a990503afcd075fb",
+       "model_id": "b13b2c9922b54599adcfb2d9629d19f1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -400,14 +459,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 49 s, sys: 84 ms, total: 49.1 s\n",
-      "Wall time: 48.9 s\n"
+      "CPU times: user 1min 31s, sys: 127 ms, total: 1min 31s\n",
+      "Wall time: 1min 31s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "anjl.canonical_nj(xl_D, progress=tqdm);"
+    "anjl.canonical_nj(xl_dist, progress=tqdm);"
    ]
   },
   {
@@ -420,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "id": "ccd20931-8281-49ff-b142-d0fae8d53f63",
    "metadata": {},
    "outputs": [
@@ -430,27 +489,27 @@
        "(8825, 8825)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "xxl = zarr.load(\"../benchmark/xxl/dist.zarr.zip\")\n",
-    "xxl_D = squareform(xxl)\n",
+    "xxl_dist = zarr.load(\"../benchmark/xxl/dist.zarr.zip\")\n",
+    "xxl_D = squareform(xxl_dist)\n",
     "xxl_D.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "id": "4b302183-5d97-41c0-857f-59086e8b981f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ed64cba72d824ec08de3c2657449087e",
+       "model_id": "9ed91d22cc3c4b63bccc358ec47431b7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -465,26 +524,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 5.18 s, sys: 54 ms, total: 5.23 s\n",
-      "Wall time: 5.2 s\n"
+      "CPU times: user 6.39 s, sys: 35.9 ms, total: 6.43 s\n",
+      "Wall time: 6.38 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "anjl.dynamic_nj(xxl_D, progress=tqdm);"
+    "anjl.dynamic_nj(xxl_dist, progress=tqdm);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "id": "94f6d2f5-e61e-45c8-934f-66289798bce9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d745ce2da5624294866f22e80053d0ac",
+       "model_id": "0402fdf675f4420b851c0b01a2306165",
        "version_major": 2,
        "version_minor": 0
       },
@@ -499,48 +558,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 4s, sys: 545 ms, total: 1min 5s\n",
-      "Wall time: 1min 5s\n"
+      "CPU times: user 1min 10s, sys: 663 ms, total: 1min 10s\n",
+      "Wall time: 1min 10s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "anjl.rapid_nj(xxl_D, progress=tqdm);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "8949ce8a-7b75-470d-8ddf-501ab4cf462b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "45e7602335714d03a2029db835728fc9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/8824 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 2min 58s, sys: 241 ms, total: 2min 58s\n",
-      "Wall time: 2min 57s\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "anjl.canonical_nj(xxl_D, progress=tqdm);"
+    "anjl.rapid_nj(xxl_dist, progress=tqdm);"
    ]
   },
   {
