--- a/sandbox/plot.ipynb
+++ b/sandbox/plot.ipynb
@@ -11,6 +11,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b82a9720-1a69-4fbe-82d7-9a2d83ddc175",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "os.environ[\"NUMBA_DEVELOPER_MODE\"] = \"1\"\n",
+    "os.environ[\"NUMBA_BOUNDSCHECK\"] = \"1\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "864df6fb-3976-4e02-a9d6-bba8cfd709cd",
    "metadata": {},
    "outputs": [],
@@ -42,6 +55,8 @@
    "outputs": [],
    "source": [
     "D1, _ = anjl.data.example_1()\n",
+    "dist1 = squareform(D1)\n",
+    "assert dist1.ndim == 1\n",
     "D1"
    ]
   },
@@ -52,7 +67,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Z1d = anjl.dynamic_nj(D1)\n",
+    "Z1d = anjl.dynamic_nj(dist1)\n",
     "Z1d"
    ]
   },
@@ -63,7 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Z1r = anjl.rapid_nj(D1)\n",
+    "Z1r = anjl.rapid_nj(dist1)\n",
     "Z1r"
    ]
   },
@@ -74,7 +89,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Z1 = anjl.canonical_nj(D1)\n",
+    "Z1 = anjl.canonical_nj(dist1)\n",
     "Z1"
    ]
   },
@@ -204,24 +219,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65cdf669-4a98-4208-8447-de76c90cef0f",
+   "id": "fb8f4443-6f3a-4ab4-92f0-aa0ed336662d",
    "metadata": {},
    "outputs": [],
    "source": [
     "D2, _ = anjl.data.wikipedia_example()\n",
+    "dist2 = squareform(D2)\n",
+    "assert dist2.ndim == 1\n",
     "D2"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15ba2fbb-71ae-4906-8c91-680b1bac7908",
+   "id": "a9d6a6da-8206-45e4-9f26-3a302b70ed34",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Z2d = anjl.dynamic_nj(D2)\n",
-    "Z2r = anjl.rapid_nj(D2)\n",
-    "Z2 = anjl.canonical_nj(D2)"
+    "Z2d = anjl.dynamic_nj(dist2)\n",
+    "Z2r = anjl.rapid_nj(dist2)\n",
+    "Z2 = anjl.canonical_nj(dist2)"
    ]
   },
   {
@@ -279,6 +296,8 @@
     "D3, ld3 = anjl.data.mosquitoes()\n",
     "loc_shuffle = np.random.choice(D3.shape[0], size=D3.shape[0], replace=False)\n",
     "D3 = D3.take(loc_shuffle, axis=0).take(loc_shuffle, axis=1)\n",
+    "dist3 = squareform(D3)\n",
+    "assert dist3.ndim == 1\n",
     "ld3 = ld3.iloc[loc_shuffle].reset_index(drop=True)\n",
     "D3.shape"
    ]
@@ -290,9 +309,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Z3d = anjl.dynamic_nj(D3)\n",
-    "Z3r = anjl.rapid_nj(D3)\n",
-    "Z3 = anjl.canonical_nj(D3)"
+    "Z3d = anjl.dynamic_nj(dist3)\n",
+    "Z3r = anjl.rapid_nj(dist3)\n",
+    "Z3 = anjl.canonical_nj(dist3)"
    ]
   },
   {
@@ -383,11 +402,9 @@
    "outputs": [],
    "source": [
     "ld4 = pd.read_csv(\"../benchmark/medium/samples.csv\")\n",
-    "medium = zarr.load(\"../benchmark/medium/dist.zarr.zip\")\n",
-    "D4 = squareform(medium)\n",
-    "loc_shuffle = np.random.choice(D4.shape[0], size=D4.shape[0], replace=False)\n",
-    "D4 = D4.take(loc_shuffle, axis=0).take(loc_shuffle, axis=1)\n",
-    "ld4 = ld4.iloc[loc_shuffle].reset_index(drop=True)\n",
+    "dist4 = zarr.load(\"../benchmark/medium/dist.zarr.zip\")\n",
+    "assert dist4.ndim == 1\n",
+    "D4 = squareform(dist4)\n",
     "D4.shape"
    ]
   },
@@ -398,9 +415,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Z4d = anjl.dynamic_nj(D4)\n",
-    "Z4r = anjl.rapid_nj(D4)\n",
-    "Z4 = anjl.canonical_nj(D4)"
+    "Z4d = anjl.dynamic_nj(dist4)\n",
+    "Z4r = anjl.rapid_nj(dist4)\n",
+    "Z4 = anjl.canonical_nj(dist4)"
    ]
   },
   {
@@ -456,14 +473,12 @@
    "outputs": [],
    "source": [
     "ld5 = pd.read_csv(\"../benchmark/large/samples.csv\")\n",
-    "large = zarr.load(\"../benchmark/large/dist.zarr.zip\")\n",
-    "D5 = squareform(large)\n",
-    "loc_shuffle = np.random.choice(D5.shape[0], size=D5.shape[0], replace=False)\n",
-    "D5 = D5.take(loc_shuffle, axis=0).take(loc_shuffle, axis=1)\n",
-    "ld5 = ld5.iloc[loc_shuffle].reset_index(drop=True)\n",
+    "dist5 = zarr.load(\"../benchmark/large/dist.zarr.zip\")\n",
+    "assert dist5.ndim == 1\n",
+    "D5 = squareform(dist5)\n",
     "\n",
-    "Z5d = anjl.dynamic_nj(D5)\n",
-    "Z5r = anjl.rapid_nj(D5)\n",
+    "Z5d = anjl.dynamic_nj(dist5)\n",
+    "Z5r = anjl.rapid_nj(dist5)\n",
     "\n",
     "D5.shape"
    ]
@@ -520,14 +535,12 @@
    "outputs": [],
    "source": [
     "ld6 = pd.read_csv(\"../benchmark/xl/samples.csv\")\n",
-    "large = zarr.load(\"../benchmark/xl/dist.zarr.zip\")\n",
-    "D6 = squareform(large)\n",
-    "loc_shuffle = np.random.choice(D6.shape[0], size=D6.shape[0], replace=False)\n",
-    "D6 = D6.take(loc_shuffle, axis=0).take(loc_shuffle, axis=1)\n",
-    "ld6 = ld6.iloc[loc_shuffle].reset_index(drop=True)\n",
+    "dist6 = zarr.load(\"../benchmark/xl/dist.zarr.zip\")\n",
+    "assert dist6.ndim == 1\n",
+    "D6 = squareform(dist6)\n",
     "\n",
-    "Z6d = anjl.dynamic_nj(D6)\n",
-    "Z6r = anjl.rapid_nj(D6)\n",
+    "Z6d = anjl.dynamic_nj(dist6)\n",
+    "Z6r = anjl.rapid_nj(dist6)\n",
     "\n",
     "D6.shape"
    ]
